@@ -12,7 +12,7 @@
 <dependency>
     <groupId>io.github.bonigarcia</groupId>
     <artifactId>webdrivermanager</artifactId>
-    <version>5.8.0</version> 
+    <version>5.8.0</version>  <!-- Latest version -->
 </dependency>
 <dependency>
       <groupId>org.testng</groupId>
@@ -33,61 +33,17 @@
     <version>7.20.1</version>
 </dependency>
 
-
-    
-    <!-- SLF4J API -->
-    <dependency>
-        <groupId>org.slf4j</groupId>
-        <artifactId>slf4j-api</artifactId>
-        <version>2.0.12</version>  <!-- Use the latest version -->
-    </dependency>
-
-    <!-- SLF4J Simple Logger (or use logback-classic for advanced logging) -->
-    <dependency>
-        <groupId>org.slf4j</groupId>
-        <artifactId>slf4j-simple</artifactId>
-        <version>2.0.12</version>  <!-- Use the latest version -->
-    </dependency>
-    <dependency>
-        <groupId>org.apache.logging.log4j</groupId>
-        <artifactId>log4j-core</artifactId>
-        <version>2.17.1</version>
-    </dependency>
-    <dependency>
-        <groupId>org.apache.logging.log4j</groupId>
-        <artifactId>log4j-api</artifactId>
-        <version>2.17.1</version>
-    </dependency>
-    <dependency>
-    <groupId>org.projectlombok</groupId>
-    <artifactId>lombok</artifactId>
-    <version>1.18.24</version> 
-    <scope>provided</scope>
-</dependency>
-    
-    <!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
+                <!-- https://mvnrepository.com/artifact/com.aventstack/extentreports -->
 <dependency>
-    <groupId>org.apache.poi</groupId>
-    <artifactId>poi</artifactId>
-    <version>5.2.5</version>
+    <groupId>com.aventstack</groupId>
+    <artifactId>extentreports</artifactId>
+    <version>5.0.9</version>
 </dependency>
-<!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
+<!-- https://mvnrepository.com/artifact/tech.grasshopper/extentreports-cucumber7-adapter -->
 <dependency>
-    <groupId>org.apache.poi</groupId>
-    <artifactId>poi</artifactId>
-    <version>5.4.0</version>
-</dependency>
-<!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
-<dependency>
-    <groupId>org.apache.poi</groupId>
-    <artifactId>poi</artifactId>
-    <version>5.2.3</version>
-</dependency>
-<!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
-<dependency>
-    <groupId>org.apache.poi</groupId>
-    <artifactId>poi-ooxml</artifactId>
-    <version>3.9</version>
+    <groupId>tech.grasshopper</groupId>
+    <artifactId>extentreports-cucumber7-adapter</artifactId>
+    <version>1.10.1</version>
 </dependency>
 <!-- https://mvnrepository.com/artifact/io.qameta.allure/allure-testng -->
 <dependency>
@@ -95,49 +51,85 @@
     <artifactId>allure-testng</artifactId>
     <version>2.29.1</version>
 </dependency>
-<!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
-<dependency>
-    <groupId>org.apache.poi</groupId>
-    <artifactId>poi-ooxml</artifactId>
-    <version>5.2.3</version>
-</dependency>
+
 <!-- Cucumber Dependencies -->
+
     <dependency>
+
         <groupId>io.cucumber</groupId>
+
         <artifactId>cucumber-java</artifactId>
+
         <version>7.14.0</version>
+
     </dependency>
+
 <dependency>
+
         <groupId>io.cucumber</groupId>
+
         <artifactId>cucumber-testng</artifactId>
+
         <version>7.14.0</version>
+
     </dependency>
-    <!-- TestNG -->
-    <dependency>
-        <groupId>org.testng</groupId>
-        <artifactId>testng</artifactId>
-        <version>7.8.0</version>
-        <scope>test</scope>
-    </dependency>
+    
 <!-- Allure Cucumber 7 Adapter -->
+
     <dependency>
+
         <groupId>io.qameta.allure</groupId>
+
         <artifactId>allure-cucumber7-jvm</artifactId>
+
         <version>2.24.0</version>
+
     </dependency>
+
+<!-- Allure TestNG Adapter -->
+
+    <dependency>
+
+        <groupId>io.qameta.allure</groupId>
+
+        <artifactId>allure-testng</artifactId>
+
+        <version>2.24.0</version>
+
+    </dependency><!-- https://mvnrepository.com/artifact/org.assertj/assertj-core -->
+
 <dependency>
+
     <groupId>org.assertj</groupId>
+
     <artifactId>assertj-core</artifactId>
+
     <version>3.27.3</version>
+
     <scope>test</scope>
+
+</dependency>
+<dependency>
+    <groupId>org.projectlombok</groupId>
+    <artifactId>lombok</artifactId>
+    <version>1.18.32</version> <!-- Latest stable version -->
+    <scope>provided</scope>
 </dependency>
 </dependencies>
 <build>
+
 	<plugins>
+
 		  <plugin>
+
                 <groupId>org.apache.maven.plugins</groupId>
+
                 <artifactId>maven-compiler-plugin</artifactId>
+
                 </plugin>
+
+                
+
                 <plugin>
 
 	<groupId>io.qameta.allure</groupId>
@@ -147,12 +139,31 @@
 	<version>2.12.0</version>
 
 </plugin>
-
-	</plugins>
+<plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-surefire-plugin</artifactId>
+    <version>3.0.0-M7</version>
+    <configuration>
+        <suiteXmlFiles>
+            <suiteXmlFile>testng.xml</suiteXmlFile>
+        </suiteXmlFiles>
+    </configuration>
+</plugin>
+<plugin>
+    <groupId>org.apache.maven.plugins</groupId>
+    <artifactId>maven-compiler-plugin</artifactId>
+    <version>3.11.0</version>
+    <configuration>
+        <source>17</source>
+        <target>17</target>
+        <compilerArgs>
+            <arg>--add-opens</arg>
+            <arg>jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+        </compilerArgs>
+    </configuration>
+</plugin>	</plugins>
 
 	
 
 </build>
-
-
 </project>
